#6 contrast fixes for home page buttons

--- a/SmarterBalanced.SampleItems/src/SmarterBalanced.SampleItems.Web/Styles/nav.less
+++ b/SmarterBalanced.SampleItems/src/SmarterBalanced.SampleItems.Web/Styles/nav.less
@@ -59,7 +59,7 @@ nav {
     white-space: nowrap;
 
     &:hover{
-        text-decoration: none;
+        text-decoration: underline;
     }
 }
 
