--- a/SmarterBalanced.SampleItems/src/SmarterBalanced.SampleItems.Web/Styles/site.less
+++ b/SmarterBalanced.SampleItems/src/SmarterBalanced.SampleItems.Web/Styles/site.less
@@ -32,22 +32,23 @@ body {
 	border-color: #007393;
 	box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
 }
-.btn-primary:hover { // SB
+.btn-primary:hover .btn-primary:focus { // SB
 	background-color: #005C76;
 	border-color: #005C76;
 	text-decoration: none;
 	cursor: pointer;
 	box-shadow: none;
 }
+
 .btn-success { // SB
 	background-color: #2b731b;
 	border-color: #2b731b;
 	box-shadow: 0 0.15em 0.35em 0 rgba(0,0,0,0.135);
 }
-.btn-success:hover { // SB
+.btn-success:hover, .btn-success:focus { // SB
 	background-color: #225b15;
 	border-color: #225b15;
-	text-decoration: none;
+	text-decoration: underline;
 	cursor: pointer;
 	box-shadow: none;
 }
